--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,10 +41,10 @@ body{
 ::-webkit-scrollbar-track{background-color: transparent; border-radius: 20px;}
 ::-webkit-scrollbar-thumb{background-color: inherit;}
 
-header{
-    width: 55px;
-    height: 100%;  
-}
+// header{
+//     width: 55px;
+//     height: 100%;  
+// }
 
 header, footer{
     position: fixed;
