--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -1,5 +1,61 @@
-@include media-sm {
+@include media-xs {
+    .mainMembers{
+        padding-top: 10%;
+        padding-bottom: 0;
+        width: 50%;
+        height: 10%;
+        overflow: scroll;
+        background-color: slategrey;
+
+        &__dets{
+            margin-bottom: 5em;
+            height: 70vh;
+
+            &:nth-child(13){
+                margin-bottom: 0;
+                padding-bottom: 0;
+            }
+
+            &__number{
+                right: 0;
+                // margin-top: -2.5em;
+                margin-top: 35%;
+                // margin-top: 60%;
+                opacity: 0.5;
+                position: absolute;
+                // margin-top: 0;
+            }
     
+            &__imageDiv{
+                // height: 80vh;
+                left: 0;
+                width: 70%;
+                // height: 600px;
+                // margin: 0 2em 0 2em;
+                // position: absolute;
+                // display: inline-block;
+                // overflow: hidden;
+                // height: 600px;
+                // right: 30%;
+
+               
+
+                // &:hover img{
+                //     transform: scale(1.1);
+                // }
+                
+                &__image{
+                    width: 10%;
+                    height: 80%;
+
+                    &:nth-child(13){
+                        height: 400px;
+                     }
+                    // object-position: center;
+                } 
+            }
+        }
+    }
 }
 
 @include media-md {
@@ -27,7 +83,10 @@
         // backdrop-filter: invert(20%);
     }
     .menu_btn{
+        // position: absolute;
         top: 1.5rem;
+        right: 3em;
+        // left: 28em;
         left: 93%;
         // backdrop-filter: grayscale(100%);
         // width: 530px;
@@ -232,15 +291,16 @@
     }
     // MEMBERS
     .mainMembers{
-        padding-top: 5em;
-        padding-bottom: 0;
+        // padding-top: 3em;
+        
         width: 80%;
         height: 90%;
-        
+        // overflow: hidden;
     
         &__dets{
             margin-bottom: 5em;
             height: 70vh;
+            // padding-bottom: -2em;
 
             &:nth-child(13){
                 margin-bottom: 0;
@@ -250,7 +310,7 @@
             &__number{
                 right: 0;
                 // margin-top: -2.5em;
-                margin-top: -48%;
+                margin-top: -2.9em;
                 // margin-top: 60%;
                 opacity: 0.5;
                 position: absolute;
@@ -261,6 +321,7 @@
                 // height: 80vh;
                 left: 0;
                 width: 90%;
+                height: 90%;
                 // height: 600px;
                 // margin: 0 2em 0 2em;
                 // position: absolute;
@@ -314,10 +375,23 @@
         padding: 7em 0;
         // width: 75%;
 
+        &__seventeen__name{
+            position: absolute;
+            // font-size: 8em;
+            font-size: 5em;
+            // font-family: $discographyfont;
+            filter: invert(50%);
+            margin-top: -1em;
+            // opacity: 0.5;
+            
+            // margin-left: 0;
+        }
+
         &__paragraph{
             margin: 2em 0 0 0;
             height: 40%;
             &__name{
+                
                 margin-top: 2em;
                 width: 100%;
                 background-size: contain;
@@ -668,7 +742,7 @@
                                             opacity: .3;
                                             // top: 1.8em;
                                             margin-top: -0.5em;
-                                            margin-left: -1em;
+                                            margin-left: -1.5em;
                                         }
                                     }
                                 }
@@ -692,5 +766,4 @@
         }
     }
 }
-
 
