--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -11,9 +11,10 @@
 
     &__dets{
         // position: relative;
-        height: 90vh;
+        height: 80vh;
         padding-bottom: 0;
-        overflow: hidden;
+        // margin-bottom: 5em;
+        // overflow: hidden;
 
             &__number{
                 // position: absolute;
