--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -9,7 +9,7 @@
     overflow-x: hidden;
 
     &__seventeen__name{
-        // position: fixed;
+        position: absolute;
         // font-size: 8em;
         font-size: 10em;
         font-family: $discographyfont;
@@ -49,7 +49,8 @@
             filter: grayscale(100%);
             transition: .5s ease-in-out;
             text-align: right;
-            padding: 2em;
+            padding: 0;
+            position: relative;
             
 
             &::before{
