--- a/scss/main.css
+++ b/scss/main.css
@@ -677,6 +677,7 @@ header {
 }
 
 .mainProfile__seventeen__name {
+  position: absolute;
   font-size: 10em;
   font-family: New York;
   -webkit-filter: invert(50%);
@@ -702,7 +703,8 @@ header {
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   text-align: right;
-  padding: 2em;
+  padding: 0;
+  position: relative;
 }
 
 .mainProfile__paragraph__name::before {
@@ -1086,9 +1088,8 @@ header {
 }
 
 .mainMembers__dets {
-  height: 90vh;
+  height: 80vh;
   padding-bottom: 0;
-  overflow: hidden;
 }
 
 .mainMembers__dets__number {
@@ -1520,6 +1521,42 @@ header {
   opacity: 1;
 }
 
+@media screen and (max-width: 300px) {
+  .mainMembers {
+    padding-top: 10%;
+    padding-bottom: 0;
+    width: 50%;
+    height: 10%;
+    overflow: scroll;
+    background-color: slategrey;
+  }
+  .mainMembers__dets {
+    margin-bottom: 5em;
+    height: 70vh;
+  }
+  .mainMembers__dets:nth-child(13) {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  .mainMembers__dets__number {
+    right: 0;
+    margin-top: 35%;
+    opacity: 0.5;
+    position: absolute;
+  }
+  .mainMembers__dets__imageDiv {
+    left: 0;
+    width: 70%;
+  }
+  .mainMembers__dets__imageDiv__image {
+    width: 10%;
+    height: 80%;
+  }
+  .mainMembers__dets__imageDiv__image:nth-child(13) {
+    height: 400px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   #cursor {
     width: 30px;
@@ -1540,6 +1577,7 @@ header {
   }
   .menu_btn {
     top: 1.5rem;
+    right: 3em;
     left: 93%;
   }
   #colorMode {
@@ -1674,8 +1712,6 @@ header {
             filter: brightness(60%) grayscale(100%);
   }
   .mainMembers {
-    padding-top: 5em;
-    padding-bottom: 0;
     width: 80%;
     height: 90%;
   }
@@ -1689,13 +1725,14 @@ header {
   }
   .mainMembers__dets__number {
     right: 0;
-    margin-top: -48%;
+    margin-top: -2.9em;
     opacity: 0.5;
     position: absolute;
   }
   .mainMembers__dets__imageDiv {
     left: 0;
     width: 90%;
+    height: 90%;
   }
   .mainMembers__dets__imageDiv:hover img {
     -webkit-transform: scale(1.1);
@@ -1727,6 +1764,13 @@ header {
   .mainProfile {
     width: 80%;
     padding: 7em 0;
+  }
+  .mainProfile__seventeen__name {
+    position: absolute;
+    font-size: 5em;
+    -webkit-filter: invert(50%);
+            filter: invert(50%);
+    margin-top: -1em;
   }
   .mainProfile__paragraph {
     margin: 2em 0 0 0;
@@ -2025,7 +2069,7 @@ header {
     font-size: 0.9em;
     opacity: .3;
     margin-top: -0.5em;
-    margin-left: -1em;
+    margin-left: -1.5em;
   }
   .mainDiscography__discography__dets__id {
     top: 2.7em;
