--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -16,12 +16,30 @@
         // margin-bottom: 5em;
         // overflow: hidden;
 
+            &__pronunciation{
+                display: none;
+                position: absolute;
+                right: 0;
+                // top: 0;
+                // width: 10%;
+                height: 100%;
+                text-align: right;
+                // margin: 0;
+                margin-right: 9.8em;
+                margin-top: -30%;
+                font-size: 2.5em;
+                opacity: 0.65;
+                writing-mode: vertical-lr;
+                text-orientation: upright;
+                z-index: -1;
+            }
+        
             &__number{
                 // position: absolute;
                 width: 100%;
                 text-align: right;
                 margin-right: 0;
-                margin-top: 25%;
+                margin-top: 22%;
                 font-size: 5em;
                 opacity: 0.1;
             }
@@ -78,6 +96,7 @@
             &__label{
                 font-style: oblique;
                 font-weight: 800;
+                margin-right: 0.5em;
             }
 
             &__name{
