--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     width: 90%;
     height: 100%;
-    padding: 7em 2em;
+    padding: 2.5em 2em;
     overflow-x: hidden;
 
     &__seventeen__name{
@@ -23,11 +23,11 @@
     &__paragraph{
         position: relative;
         // top: 2em;
-        height: 40%;
+        // height: 40%;
         // width: 40%;
         // margin: 2em 0 10em 0;
-        margin: 5em 0 10em 0;
-        display: inline-block;
+        margin: 0 0 10em 0;
+        // display: inline-block;
 
         
         &__name{
@@ -44,7 +44,7 @@
             background-size: contain;
             background-blend-mode: saturation;
             // width: 30em;
-            // width: 100%;
+            width: 100%;
             height: 20em;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
@@ -75,7 +75,7 @@
             background-size: cover;
             background-blend-mode: saturation;
             // top: 20em;
-            margin-top: 5em;
+            margin-top: 20em;
             margin-left: 80%;
             width: 20em;
             height: 20em;
@@ -90,12 +90,23 @@
                 font-size: 5em;
                 opacity: .5;
                 right: 3.5em;
+                margin-top: -1em;
             }
 
             &:hover{
                 filter: grayscale(0%);
                 transition: .5s ease-in;
             }
+        }
+
+        &__debutdate{
+            // position: absolute;
+            font-size: 7em;
+            // opacity: .5;
+            // filter: invert(50%);
+            font-family: $discographyfont;
+            margin-top: -1em;
+            // margin-left: 0.5em;
         }
 
         &__members{
@@ -334,14 +345,14 @@
             background: url("../../../images/members/jun_attacca_op1.jpg") no-repeat fixed;
             background-size: cover;
             background-blend-mode: saturation;
-            display: inline-block;
+            // display: inline-block;
             // top: 115em;
             // right: 3.5em;
             width: 25em;
             height: 25em;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
-            margin-left: 5em;
+            margin-left: 2em;
             // text-align: left;
             padding: 2em;
             margin-top: 20em;
@@ -362,17 +373,20 @@
             }
         }
         &__morecontents{
+            position: absolute;
+            right: 5em;
             background: url("../../../images/members/jun_attacca_op1.jpg") no-repeat fixed;
             background-size: cover;
             background-blend-mode: saturation;
-            display: inline-block;
+            // display: inline-block;
             width: 25em;
             height: 25em;
             margin-left: 15em;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
             text-align: left;
-            padding: 2em;
+            padding: 1em;
+            margin-top: 5em;
 
             &::before{
                 content: "More Contents";
